Add in title : "The quick way"

--- a/lesson1-quick.ipynb
+++ b/lesson1-quick.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dogs vs Cats"
+    "## Dogs vs Cats | The quick way"
    ]
   },
   {
