Visualize image after transformation by tfms_from_model()

--- a/lesson1-quick.ipynb
+++ b/lesson1-quick.ipynb
@@ -575,6 +575,20 @@
     "print(f'The class is : {data.classes[result[0]]}')"
    ]
   },
+    {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize the image after transformation by tfms_from_model()\n",
+    "print(im.shape)\n",
+    "im_show = np.swapaxes(im,0,2)\n",
+    "im_show = np.swapaxes(im_show,0,1)\n",
+    "print(im_show.shape)\n",
+    "plt.imshow(im_show)\n"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
