Display the scatter diagram of the predictions (1 image)

--- a/lesson1-quick.ipynb
+++ b/lesson1-quick.ipynb
@@ -589,6 +589,17 @@
     "plt.imshow(im_show)\n"
    ]
   },
+    {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the scatter diagram of the predictions (probabilities) for the image\n",
+    "# nb_classes : the number of classes\n",
+    "matplotlib.pyplot.scatter(list(range(nb_classes), np.exp(pred))\n"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
