Increase the display size of the confusion matrix

--- a/lesson1-quick.ipynb
+++ b/lesson1-quick.ipynb
@@ -647,6 +647,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Increase the display size of the confusion matrix\n",
+    "matplotlib.rcParams['figure.figsize'] = [30,20]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_confusion_matrix(cm, data.classes)"
    ]
   },
