script to create traning and validation sets based on choose RATIO

--- a/lesson1-quick.ipynb
+++ b/lesson1-quick.ipynb
@@ -129,6 +129,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note : If needed, script to create traning and validation sets based on choose RATIO\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(from Welton Rodrigo Torres Nascimento) https://github.com/piegu/mag-fofa/blob/master/scripts/create_sets.sh"
+   ]
+  },  
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
