correction of traning to training

--- a/lesson1-quick.ipynb
+++ b/lesson1-quick.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Note : If needed, script to create traning and validation sets based on choose RATIO\n"
+    "## Note : If needed, script to create training and validation sets based on choose RATIO\n"
    ]
   },
   {
