add learn.export() and load_learner()

--- a/pretrained-imagenet-classifier-fastai-v1.ipynb
+++ b/pretrained-imagenet-classifier-fastai-v1.ipynb
@@ -86,6 +86,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Config.data_path()\n",
+    "os.makedirs(path/'imagenet', exist_ok=True)\n",
+    "path = path/'imagenet'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,26 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get weights of the model, build the model and put it into eval mode\n",
-    "model = models.resnet34(pretrained=True, num_classes=1000)\n",
-    "model = nn.Sequential(model, nn.LogSoftmax(dim=1))\n",
-    "model = model.eval()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get ImageNet classes\n",
-    "url = 'https://gist.githubusercontent.com/yrevar/942d3a0ac09ec9e5eb3a/' \\\n",
-    "      'raw/596b27d23537e5a1b5751d2b0481ef172f58b539/imagenet1000_clsid_to_human.txt'\n",
-    "imagenet_classes = eval(requests.get(url).content)"
+    "# Get weights of the model and add nn.LogSoftmax(dim=1) to the end\n",
+    "model_name = 'resnet34'\n",
+    "model = models.resnet34(pretrained=True)\n",
+    "model = nn.Sequential(model, nn.LogSoftmax(dim=1))"
    ]
   },
   {
@@ -129,8 +128,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get ImageNet classes\n",
+    "url = 'https://gist.githubusercontent.com/yrevar/942d3a0ac09ec9e5eb3a/' \\\n",
+    "      'raw/596b27d23537e5a1b5751d2b0481ef172f58b539/imagenet1000_clsid_to_human.txt'\n",
+    "\n",
+    "classes_dict = eval(requests.get(url).content)\n",
+    "classes = [classes_dict[i] for i in range(len(classes_dict))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Transformation to apply to image before prediction (center crop)\n",
-    "tfms = [crop_pad()]"
+    "# tfms = get_transforms() is possible too\n",
+    "tfms = [ [], [crop_pad()] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get an empty databunch with the ImageNet classes\n",
+    "# WARNING single_from_classes is deprecated (https://docs.fast.ai/vision.data.html#ImageDataBunch.single_from_classes)\n",
+    "data = ImageDataBunch.single_from_classes(path, classes, tfms=tfms, size=224).normalize(imagenet_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the learner of the model\n",
+    "learn = Learner(data, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the learner\n",
+    "learn.export(f'{model_name}.pkl')"
    ]
   },
   {
@@ -142,14 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# List of images to classify\n",
     "images = [('cat', 'https://www.readersdigest.ca/wp-content/uploads/sites/14/2011/01/4-ways-cheer-up-depressed-cat.jpg'),\n",
     "          ('dog', 'https://c.photoshelter.com/img-get/I0000q_DdkyvP6Xo/s/900/900/Pomeranian-Dog-with-Ball.jpg'),\n",
-    "          ('wine', 'https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F5e7dc0d2-9b24-11e8-9837-8c5d4fba4ce3.jpg?crop=2667%2C1500%2C0%2C0&resize=685')]"
+    "          ('wine', 'https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F5e7dc0d2-9b24-11e8-9837-8c5d4fba4ce3.jpg?crop=2667%2C1500%2C0%2C0&resize=685')\n",
+    "         ]"
    ]
   },
   {
@@ -161,7 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the learner\n",
+    "# Tutorial online at https://docs.fast.ai/tutorial.inference.html\n",
+    "learn = load_learner(path, f'{model_name}.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -187,16 +244,12 @@
     "    class_name, img_url = image[0], image[1]\n",
     "    response = requests.get(img_url)\n",
     "    img = open_image(BytesIO(response.content))\n",
-    "    \n",
-    "    # apply crop_pad + resize to 224 + normalisation \n",
-    "    img_tfms = normalize(img.apply_tfms(tfms, size=224).data, *tensor(imagenet_stats))\n",
-    "    \n",
+    "\n",
     "    # Get prediction\n",
-    "    img_tfms = img_tfms.view(1, 3, 224, 224)\n",
-    "    preds = model(img_tfms).data.cpu().numpy()\n",
-    "    num_class = np.argmax(preds)\n",
+    "    cat, indice, preds = learn.predict(img)\n",
     "    \n",
-    "    img.show(ax=ax[i], title=f'{class_name} / {imagenet_classes[num_class]}')"
+    "    # Display images with True label / Prediction\n",
+    "    img.show(ax=ax[i], title=f'{class_name} / {cat}')"
    ]
   }
  ],
