(official) ImageNet LOC_synset_mapping.txt
(official) ImageNet LOC_synset_mapping.txt to get the ImageNet labels list

--- a/pretrained-imagenet-classifier-fastai-v1.ipynb
+++ b/pretrained-imagenet-classifier-fastai-v1.ipynb
@@ -89,11 +89,153 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "path = Config.data_path()\n",
     "os.makedirs(path/'imagenet', exist_ok=True)\n",
     "path = path/'imagenet'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the ImageNet classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Option 1**: donwload json file from https://discuss.pytorch.org/t/imagenet-classes/4923/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request, json\n",
+    "\n",
+    "# Distant json file\n",
+    "# url_json = 'https://s3.amazonaws.com/deep-learning-models/image-models/imagenet_class_index.json'\n",
+    "# with urllib.request.urlopen(url_json) as url:\n",
+    "#     class_idx = json.loads(url.read().decode())\n",
+    "    \n",
+    "# local json file \n",
+    "json_file = json.load(open(path/'imagenet_class_index.json'))\n",
+    "\n",
+    "classes = [json_file[str(k)][1] for k in range(len(json_file))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Option 2**: donwload txt file from the [Kaggle ImageNet Object Localization Challenge](https://www.kaggle.com/c/imagenet-object-localization-challenge/data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Source:  \n",
+    "# Accept rules and Download file from )\n",
+    "txt_file = path/'LOC_synset_mapping.txt'\n",
+    "f = open(txt_file).read().split(\"\\n\")\n",
+    "\n",
+    "classes = [f[i].split(' ', 1)[1] for i in range(len(f))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tench, Tinca tinca',\n",
+       " 'goldfish, Carassius auratus',\n",
+       " 'great white shark, white shark, man-eater, man-eating shark, Carcharodon carcharias',\n",
+       " 'tiger shark, Galeocerdo cuvieri',\n",
+       " 'hammerhead, hammerhead shark',\n",
+       " 'electric ray, crampfish, numbfish, torpedo',\n",
+       " 'stingray',\n",
+       " 'cock',\n",
+       " 'hen',\n",
+       " 'ostrich, Struthio camelus']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keep the first label by class\n",
+    "classes = [classes[i].split(',', 1)[0] for i in range(len(classes))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tench',\n",
+       " 'goldfish',\n",
+       " 'great white shark',\n",
+       " 'tiger shark',\n",
+       " 'hammerhead',\n",
+       " 'electric ray',\n",
+       " 'stingray',\n",
+       " 'cock',\n",
+       " 'hen',\n",
+       " 'ostrich']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes[:10]"
    ]
   },
   {
@@ -112,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,21 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get ImageNet classes\n",
-    "url = 'https://gist.githubusercontent.com/yrevar/942d3a0ac09ec9e5eb3a/' \\\n",
-    "      'raw/596b27d23537e5a1b5751d2b0481ef172f58b539/imagenet1000_clsid_to_human.txt'\n",
-    "\n",
-    "classes_dict = eval(requests.get(url).content)\n",
-    "classes = [classes_dict[i] for i in range(len(classes_dict))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the learner\n",
+    "defaults.device = torch.device('cpu')\n",
     "learn.export(f'{model_name}.pkl')"
    ]
   },
@@ -187,12 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# List of images to classify\n",
-    "images = [('cat', 'https://www.readersdigest.ca/wp-content/uploads/sites/14/2011/01/4-ways-cheer-up-depressed-cat.jpg'),\n",
+    "images = [\n",
+    "          ('cat', 'https://www.readersdigest.ca/wp-content/uploads/sites/14/2011/01/4-ways-cheer-up-depressed-cat.jpg'),\n",
     "          ('dog', 'https://c.photoshelter.com/img-get/I0000q_DdkyvP6Xo/s/900/900/Pomeranian-Dog-with-Ball.jpg'),\n",
     "          ('wine', 'https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F5e7dc0d2-9b24-11e8-9837-8c5d4fba4ce3.jpg?crop=2667%2C1500%2C0%2C0&resize=685')\n",
     "         ]"
@@ -207,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
