--- a/pretrained-imagenet-classifier-fastai-v1.ipynb
+++ b/pretrained-imagenet-classifier-fastai-v1.ipynb
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Option 1**: donwload json file from https://discuss.pytorch.org/t/imagenet-classes/4923/3"
+    "**Option 1**: download json file from https://discuss.pytorch.org/t/imagenet-classes/4923/3"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Option 2**: donwload txt file from the [Kaggle ImageNet Object Localization Challenge](https://www.kaggle.com/c/imagenet-object-localization-challenge/data)"
+    "**Option 2**: download txt file from the [Kaggle ImageNet Object Localization Challenge](https://www.kaggle.com/c/imagenet-object-localization-challenge/data)"
    ]
   },
   {
