--- a/pretrained-imagenet-classifier-fastai-v1.ipynb
+++ b/pretrained-imagenet-classifier-fastai-v1.ipynb
@@ -331,6 +331,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Put teh defaults device to CPU\n",
+    "defaults.device = torch.device('cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Import the learner\n",
     "# Tutorial online at https://docs.fast.ai/tutorial.inference.html\n",
     "learn = load_learner(path, f'{model_name}.pkl')"
@@ -338,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
