no need to change defaults device

--- a/pretrained-imagenet-classifier-fastai-v1.ipynb
+++ b/pretrained-imagenet-classifier-fastai-v1.ipynb
@@ -331,24 +331,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put teh defaults device to CPU\n",
-    "defaults.device = torch.device('cpu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the learner\n",
+    "# Import the learner object\n",
     "# Tutorial online at https://docs.fast.ai/tutorial.inference.html\n",
     "learn = load_learner(path, f'{model_name}.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
