link to medium post

--- a/pretrained-imagenet-classifier-fastai-v1.ipynb
+++ b/pretrained-imagenet-classifier-fastai-v1.ipynb
@@ -14,7 +14,7 @@
     "- Author: [Pierre Guillou](https://www.linkedin.com/in/pierreguillou)\n",
     "- Date: January 2019\n",
     "- Source: https://discuss.pytorch.org/t/pretrained-resnet-constant-output/2760\n",
-    "- Post in medium: https://medium.com/@pierre_guillou/deep-learning-web-app-par-fastai-v1-a9a2febaf62e\n",
+    "- Post in medium: https://medium.com/@pierre_guillou/deep-learning-web-app-by-fastai-v1-3ab4c20b7cac\n",
     "- Ref: [Fastai v1](https://docs.fast.ai/index.html) (Deep Learning library on PyTorch)"
    ]
   },
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective here is to use [fastai v1](https://docs.fast.ai/index.html) instead of Pytorch code in order to classify images into 1000 classes by using an ImageNet winner model."
+    "The objective is to use [fastai v1](https://docs.fast.ai/index.html) instead of Pytorch code in order to classify images into 1000 classes by using an ImageNet winner model."
    ]
   },
   {
