update to fastai 1.0.43

--- a/pretrained-imagenet-classifier-fastai-v1.ipynb
+++ b/pretrained-imagenet-classifier-fastai-v1.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "- Author: [Pierre Guillou](https://www.linkedin.com/in/pierreguillou)\n",
-    "- Date: January 2019\n",
+    "- Date: January 2019 (update to fastai 1.0.43 in February 2019)\n",
     "- Source: https://discuss.pytorch.org/t/pretrained-resnet-constant-output/2760\n",
     "- Post in medium: https://medium.com/@pierre_guillou/deep-learning-web-app-by-fastai-v1-3ab4c20b7cac\n",
     "- Ref: [Fastai v1](https://docs.fast.ai/index.html) (Deep Learning library on PyTorch)"
