link to notebook

--- a/vendas_veiculos_brasal_data_clean.ipynb
+++ b/vendas_veiculos_brasal_data_clean.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "**Modelos desenvolvidos no contexto do hackathon**\n",
     "\n",
-    "Muitos modelos AI podem ser desenvolvidos para o VIA (veja exemplos dados). Apenas para mostrar como, um **modelo de regressão fornecendo o orçamento que o cliente está disposto a gastar na compra de um veículo** está disponível online no github (seller_IA_vendas_veiculos_brasal_REGRESSAO.ipynb).\n",
+    "Muitos modelos AI podem ser desenvolvidos para o VIA (veja exemplos dados). Apenas para mostrar como, um **modelo de regressão fornecendo o orçamento que o cliente está disposto a gastar na compra de um veículo** está disponível online no github ([vendedor_IA_vendas_veiculos_brasal_REGRESSAO.ipynb](https://github.com/piegu/fastai-projects/blob/master/vendedor_IA_vendas_veiculos_brasal_REGRESSAO.ipynb)).\n",
     "\n",
     "**AI4BI (Artificial Intelligence for Business Intelligence)**\n",
     "\n",
