--- a/vendedor_IA_vendas_veiculos_brasal_REGRESSAO.ipynb
+++ b/vendedor_IA_vendas_veiculos_brasal_REGRESSAO.ipynb
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os dados de vendas de veículos Brasal ao longo de 4 anos foram processados (feature-engineered) no notebook [vendas_veiculos_brasal_data_clean.ipynb](...). O resultado é um dataframe único se chamando `df_vendas`."
+    "Os dados de vendas de veículos Brasal ao longo de 4 anos foram processados (feature-engineered) no notebook [vendas_veiculos_brasal_data_clean.ipynb](https://github.com/piegu/fastai-projects/blob/master/vendas_veiculos_brasal_data_clean.ipynb). O resultado é um dataframe único se chamando `df_vendas`."
    ]
   },
   {
@@ -2571,11 +2571,7 @@
     "    _, _ , pred = learn.predict(df3_clientes.iloc[index])\n",
     "    print(f'\\n{int(np.exp(pred[0].item()))} reais')\n",
     "else:\n",
-    "    print(f'\\nO id {client_id} não faz parte da nossa lista de clientes.')\n",
-    "\n",
-    "# test_df[\"Sales\"]=np.exp(pred[0].data).numpy().T[0]\n",
-    "# test_df[[\"Id\",\"Sales\"]]=test_df[[\"Id\",\"Sales\"]].astype(\"int\")\n",
-    "# test_df[[\"Id\",\"Sales\"]].to_csv(\"rossmann_submission.csv\",index=False)"
+    "    print(f'\\nO id {client_id} não faz parte da nossa lista de clientes.')\n"
    ]
   }
  ],
