--- a/groups_layers_different_learning_rates_fastaiv2.ipynb
+++ b/groups_layers_different_learning_rates_fastaiv2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this notebook is to explain how to create parameters groups for a model with fastai v2 in order to train each one with a different learning rate.\n",
+    "The objective of this notebook is to explain how to create parameters groups for a model with fastai v2 in order to train each one with a different learning rate and how to pass the list of Learning rates.\n",
     "\n",
     "- Author: Pierre Guillou\n",
     "- Date: May 2020"
