--- a/groups_layers_different_learning_rates_fastaiv2.ipynb
+++ b/groups_layers_different_learning_rates_fastaiv2.ipynb
@@ -92,13 +92,13 @@
     "1. if lr_max = 1e-3 -> [0.001,0.001,0.001]\n",
     "2. if lr_max = slice(1e-3) -> [0.0001,0.0001,0.001]\n",
     "3. if lr_max = slice(1e-5,1e-3) -> array([1.e-05, 1.e-04, 1.e-03]) #LRs evenly geometrically spaced\n",
-    "4. if lr_max = [1e-5, 1e-4, 1e-3] -> array([1.e-05, 1.e-04, 1.e-03]) #LRs evenly linearly spaced\n",
+    "4. if lr_max = [1e-5, 1e-4, 1e-3] -> array([1.e-05, 1.e-04, 1.e-03]) #LRs evenly linearly spaced or not\n",
     "```\n",
     "\n",
     "1. All parameters groups will use **the same Learning Rate** (and the same Optimizer method like Adam + 1cycle policy for all).\n",
     "2. The last layer group’s Learning Rate (max) value is setup to lr, and all previous parameters groups ones to **lr/10**.\n",
     "3. Train the very first layers at a Learning Rate of 1e-5, the very last at 1e-3, and the Learning Rates of other parameters groups are **evenly geometrically spaced** between theses two values.\n",
-    "4. Train the very first layers at a Learning Rate of 1e-5, the very last at 1e-3, and the Learning Rates of other parameters groups are **evenly linearly spaced** between theses two values."
+    "4. Train the very first layers at a Learning Rate of 1e-5, the very last at 1e-3, and the Learning Rates of other parameters groups are **evenly linearly spaced between theses two values or you can pass as a list any Learning Rate values**."
    ]
   },
   {
