--- a/groups_layers_different_learning_rates_fastaiv2.ipynb
+++ b/groups_layers_different_learning_rates_fastaiv2.ipynb
@@ -18,10 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this notebook is to explain how to create parameters groups for a model with fastai v2 in order to train each one with a different Learning Rate and how to pass the list of Learning Rates.\n",
+    "The objective of this notebook is to explain:\n",
     "\n",
-    "- Author: Pierre Guillou\n",
-    "- Date: May 2020"
+    "- how to create parameters groups for a model with fastai v2 \n",
+    "- how to train each parameters group with a different Learning Rate and the impact of each method on the model performance\n",
+    "- how to check the Learning Rates effectively used by the Optimizer during the training\n",
+    "\n",
+    "\n",
+    "Author: [Pierre Guillou](https://www.linkedin.com/in/pierreguillou/) on May 25, 2020."
    ]
   },
   {
