--- a/05_pet_breeds_DataParallel.ipynb
+++ b/05_pet_breeds_DataParallel.ipynb
@@ -14,7 +14,7 @@
     "- Author: [Pierre Guillou](https://www.linkedin.com/in/pierreguillou)\n",
     "- Date: June 2020\n",
     "- Sources:\n",
-    "  - caderno original do fastai v2: https://github.com/fastai/fastbook/blob/master/05_pet_breeds.ipynb\n",
+    "  - original notebook from fastai v2: https://github.com/fastai/fastbook/blob/master/05_pet_breeds.ipynb\n",
     "  - doc about Data Parallel with fastai v2: https://dev.fast.ai/distributed#ParallelTrainer"
    ]
   },
