link to train_imagenette.py

--- a/05_pet_breeds_DataParallel.ipynb
+++ b/05_pet_breeds_DataParallel.ipynb
@@ -15,6 +15,7 @@
     "- Date: June 2020\n",
     "- Sources:\n",
     "  - original notebook from fastai v2: https://github.com/fastai/fastbook/blob/master/05_pet_breeds.ipynb\n",
+    "  - example of code with DP and DDP: https://github.com/fastai/fastai2/blob/master/nbs/examples/train_imagenette.py\n",
     "  - doc about Data Parallel with fastai v2: https://dev.fast.ai/distributed#ParallelTrainer"
    ]
   },
