--- a/05_pet_breeds_DataParallel.ipynb
+++ b/05_pet_breeds_DataParallel.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook \"Pet Breeds\" using Data Parallel"
+    "# Notebook \"Pet Breeds\" using Data Parallel (DP)"
    ]
   },
   {
