link to fast notebook

--- a/finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2.ipynb
+++ b/finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2.ipynb
@@ -17,6 +17,7 @@
     "- Author: [Pierre Guillou](https://www.linkedin.com/in/pierreguillou)\n",
     "- Date: July 2020 (14/07/2020)\n",
     "- Post in medium: [Faster than training from scratch - Fine-tuning the English GPT-2 in any language with Hugging Face and fastai v2 (practical case with Portuguese)](https://medium.com/@pierre_guillou/faster-than-training-from-scratch-fine-tuning-the-english-gpt-2-in-any-language-with-hugging-f2ec05c98787)\n",
+    "- Fast notebook: [finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2_FAST.ipynb](https://github.com/piegu/fastai-projects/blob/master/finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2_FAST.ipynb)\n",
     "- Hugging face model page of [GPorTuguese-2](https://huggingface.co/pierreguillou/gpt2-small-portuguese): a language model for Portuguese text generation (and more NLP tasks...)\n",
     "- Other posts in medium of the GPT-2 series: \n",
     "  - [NLP & fastai | GPT-2](https://medium.com/@pierre_guillou/nlp-fastai-gpt-2-16ee145a4a28)\n",
