--- a/finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2.ipynb
+++ b/finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2.ipynb
@@ -577,6 +577,13 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "! pip install torch fastai2 fastcore==0.1.38",
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "nbpresent": {
