--- a/finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2.ipynb
+++ b/finetuning-English-GPT2-any-language-Portuguese-HuggingFace-fastaiv2.ipynb
@@ -578,8 +578,9 @@
   {
    "cell_type": "code",
    "outputs": [],
+   "metadata": {},
    "source": [
-    "! pip install torch fastai2 fastcore==0.1.38",
+    "! pip install torch fastai2 fastcore==0.1.38"
    ]
   },
   {
