from "last layer" to "last layers"

--- a/Product_based_on_a_Deep_Learning_model_by_fastaiv2.ipynb
+++ b/Product_based_on_a_Deep_Learning_model_by_fastaiv2.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "source": [
     "Let's train our model with the following fine-tuning techniques:\n",
-    "- **gradual unfreezing** of layers from the last one to the first ones.\n",
+    "- **gradual unfreezing** of layers from the last ones to the first ones.\n",
     "- **Discriminative Learning Rates** (notebook [05_pet_breeds.ipynb](https://github.com/fastai/fastbook/blob/master/05_pet_breeds.ipynb)).\n",
     "- **Deeper Architectures**: let's start with resnet34 as baseline, and then resnet152 as final model."
    ]
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Freeze all layers but the last (new) one"
+    "#### Freeze all layers but the last (new) ones"
    ]
   },
   {
@@ -592,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As only the last layer is unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (1e-2)**."
+    "As only the last layers are unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (1e-2)**."
    ]
   },
   {
@@ -1193,7 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Freeze all layers but the last (new) one"
+    "#### Freeze all layers but the last (new) ones"
    ]
   },
   {
@@ -1244,7 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As only the last layer is unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (2e-4)**."
+    "As only the last layers are unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (2e-4)**."
    ]
   },
   {
@@ -1780,7 +1780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Freeze all layers but the last (new) one"
+    "#### Freeze all layers but the last (new) ones"
    ]
   },
   {
@@ -1840,7 +1840,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As only the last layer is unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (1e-2)**."
+    "As only the last layers are unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (1e-2)**."
    ]
   },
   {
@@ -2159,7 +2159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Freeze all layers but the last (new) one"
+    "#### Freeze all layers but the last (new) ones"
    ]
   },
   {
@@ -2210,7 +2210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As only the last layer is unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (1e-3)**."
+    "As only the last layers are unfrozen, **let's choose the learning rate 10 times less than the one of the loss minimum as lr_max (1e-3)**."
    ]
   },
   {
